style.css
@import url('bootstrap/css/bootstrap.css'); 
@import url('bootstrap/css/bootstrap-responsive.css'); 

/* CSS RESET */
html, body, div, span, applet, object, iframe,

h1, h2, h3, h4, h5, h6, p, blockquote, pre,

a, abbr, acronym, address, big, cite, code,

del, dfn, em, font, img, ins, kbd, q, s, samp,

small, strike, strong, sub, sup, tt, var,

dl, dt, dd, ol, ul, li,

fieldset, form, label, legend,

table, caption, tbody, tfoot, thead, tr, th, td {

	margin: 0;

	padding: 0;

	border: 0;

	outline: 0;

	font-weight: inherit;

	font-style: inherit;

	font-size: 100%;

	font-family: inherit;

	vertical-align: baseline;

}

/* remember to define focus styles! */
:focus {

	outline: 0;

}

body {

	line-height: 1;

	color: black;

}

ol, ul {

	list-style: none;

}

/* tables still need 'cellspacing="0"' in the markup */

table {

	border-collapse: separate;

	border-spacing: 0;

}

caption, th, td {

	text-align: left;

	font-weight: normal;

}

blockquote:before, blockquote:after,

q:before, q:after {

	content: "";

}

blockquote, q {

	quotes: "" "";

}
/* END CSS RESET */

body { 
	background-color:#1f2320;
    padding-bottom: 40px; 
	font-family: 'Trebuchet MS', Tahoma, Arial, Helvetica, sans-serif;
	line-height:1.2em;
	font-size:0.8em;
}

#blog-title{}

#blog-title *{color:white; text-decoration:none; font-family: sans-serif; font-size:1.2em}

.post {
	margin-bottom: 80px; 
	color: white;
}

.post blockquote{
	font-style: italic;
	margin:0;
	padding:5px;
	background-color:#262927;
	border-top:1px solid #262927;
	border-bottom:1px solid #262927;
	border-left:1px solid #262927;
}

a {
	color:#D0353D;
	text-decoration:none;
}

a:hover{
	color:#D0353D;
	text-decoration:underline;
}

p, #container li{
	margin-bottom:0.9em;margin-top:0.5em;line-height:1.7em;
}

h1,h2,h3,h4,h5,h6 {
	color:#D0353D;
}

.PostHead{
	margin-bottom:10px;
	border-bottom:1px solid #262927;
	display:block;
}

.PostTitle {
	color:#D0353D;
	font-size:180%;
}

.PostDate{
}

#PageBody{
	margin-top:20px;
}

#masthead-meta{
	text-align:right
}

#masthead-meta a{
	color:white;
	font-weight:bold;
	padding: 5px;
}

#masthead { 
	width: 100%;
	height: 240px;
	position: relative;
	background: url(images/spanningbg.jpg) no-repeat center top fixed; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	margin-bottom: 40px; 
}

#navwrap{
	background-color:#262927;
	width:100%;
	height:25px;
	position: absolute;
	bottom: 0px;
}

